--- a/lets grow more task 1.ipynb
+++ b/lets grow more task 1.ipynb
@@ -5,8 +5,8 @@
    "id": "c3ca1c2e",
    "metadata": {},
    "source": [
-    "# Task name : Iris Flowers Classification ML Project || February 2022\n",
-    "Perform by : abhishek Chauhan\n",
+    "# Task name : Iris Flowers Classification ML Project \n",
+    "Perform by : Abhishek Chauhan\n",
     "\n",
     "Description Of Task:\n",
     "\n",
