--- a/lets_grow_more_task_2.ipynb
+++ b/lets_grow_more_task_2.ipynb
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Task name : Stock Market Prediction And Forecasting Using Stacked LSTM ||February 2022"
+        "Task name : Stock Market Prediction And Forecasting Using Stacked LSTM "
       ],
       "metadata": {
         "id": "jkRlBc9UwtwS"
@@ -40,7 +40,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Perform by : Unmesh Ganesh Bhosale**"
+        "**Perform by : Abhishek chauhan**"
       ],
       "metadata": {
         "id": "6U3IrfyVnsWb"
