Update let's grow more task 4.ipynb

--- a/let's grow more task 4.ipynb
+++ b/let's grow more task 4.ipynb
@@ -5,7 +5,7 @@
    "id": "4a107f28",
    "metadata": {},
    "source": [
-    "# Task name : EXPLORATORY DATA ANALYSIS ON DATASET - TERRORISM(Intermediate Level Task) || February 2022"
+    "# Task name : EXPLORATORY DATA ANALYSIS ON DATASET - TERRORISM(Intermediate Level Task)  "
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "ca9b5232",
    "metadata": {},
    "source": [
-    " Perform by : Unmesh Ganesh Bhosale\n",
+    " Perform by : Abhishek Chauhan\n",
     " \n",
     " Data Science Intern"
    ]
