Update let's grow more task 3.ipynb

--- a/let's grow more task 3.ipynb
+++ b/let's grow more task 3.ipynb
@@ -5,9 +5,9 @@
    "id": "669d8ac2",
    "metadata": {},
    "source": [
-    "# Task name : Image to Pencil Sketch with Python || February 2022\n",
+    "# Task name : Image to Pencil Sketch with Python \n",
     " \n",
-    " Perform by : Unmesh Ganesh Bhosale\n",
+    " Perform by : Abhishek Chauhan\n",
     " \n",
     " Data Science Intern"
    ]
